# C6

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.agents/skills/: db-migrations.md  leptos-ui.md  rust-patterns.md  sustainability-standards.md
.github/workflows/: ci.yml  release.yml
docs/: guide.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_seed.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: calculate.rs  mod.rs  org.rs  reports.rs  sources.rs  ungc.rs
src-tauri/src/engine/: gwp.rs  intensity.rs  mod.rs  scope1.rs  scope2.rs  scope3.rs
src/lib/: tauri.ts
src/lib/components/: Sidebar.svelte
src/lib/stores/: app.ts
src/routes/: Dashboard.svelte  Reports.svelte  Scope1.svelte  Scope2.svelte  Scope3.svelte  Settings.svelte  Setup.svelte  Ungc.svelte
ui/: Cargo.toml  Trunk.toml  index.html
ui/src/: app.rs  main.rs  store.rs  tauri.rs  types.rs
ui/src/components/: sidebar.rs
ui/src/routes/: dashboard.rs  mod.rs  reports.rs  scope1.rs  scope2.rs  scope3.rs  settings.rs  setup.rs  ungc.rs
worker/: Cargo.toml  wrangler.toml
worker/migrations/: 0001_enterprise_schema.sql
worker/src/: auth.rs  jwt.rs  lib.rs  payments.rs  sync.rs  updates.rs
