[package]
name = "c12"
version = "0.1.0"
description = "c12 — Carbon Accounting Software"
authors = ["c22 Space"]
edition = "2021"

[lib]
name = "c12_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
printpdf = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
zip = "2"
csv = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
