[package]
name = "c12-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c12-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
