[package]
name = "c12-worker"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"

[profile.release]
opt-level = "s"
